# HC_xray_scattering

./: .gitignore  CMakeLists.txt  MANIFEST.in  README.md  environment.yml  pyproject.toml  setup.py
.github/workflows/: build-wheels.yml
cmake/: BuildDependencies.cmake  FindFLINT.cmake
example/: example_fit.xy  example_params.json  run_example.py
include/: calculations.h  enumerations.h  iobs_calculator.h  iobs_parameters.h  structs.h
src/: calculations.cpp  iobs_calculator.cpp  python_bindings.cpp
