[build-system]
requires = [
    "scikit-build-core>=0.3.0",
    "pybind11>=2.6.0",
]
build-backend = "scikit_build_core.build"

[project]
name = "iobs_ngc"
version = "0.1.2"
description = "Python bindings for iobs_ngc"
requires-python = ">=3.8"
dependencies = []
readme = "README.md"

[tool.scikit-build]
cmake.minimum-version = "3.15"
cmake.build-type = "Release"

# Default: build dependencies from source
[tool.scikit-build.cmake.define]
USE_SYSTEM_LIBS = "OFF"
FETCH_BOOST = "ON"